package quantity.glasswindow.core;

public interface IAdditionalInfo{
    @SuppressWarnings("rawtypes")
    Enum getType();
}
